--- a/project.ipynb
+++ b/project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# w261 Final Project - Clickthrough Rate Prediction\n"
+    "# Clickthrough Rate Prediction\n"
    ]
   },
   {
